--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "An API for video streaming",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tamil Prabha.M",
